--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,13 @@
-<h1>All Posts</h1>
+<h1>Here are the current list of Gyms</h1>
 {{#if username}}
 <p>Hello, {{username}}</p>
 {{/if}}
+<div class="container">
+    <div class = "row">
+        <div class="card col-md-1">
+        {{#each gyms }}
+        {{>gyms this}}
+        {{/each }}
+        </div>
+    </div>
+</div>
