--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
   <head>
     <meta charset='utf-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>TEMP NAME</title>
+    <title>Gymder</title>
     <link rel='stylesheet' href='/css/style.css' />
   </head>
 
@@ -16,7 +16,7 @@
       </ul>
     </nav>
     <header>
-      <h1><a href='/'>TEMP NAME</a></h1>
+      <h1><a href='/'>Welcome to Gymder</a></h1>
     </header>
 
     <main>
