--- a/views/admin-all-posts.handlebars
+++ b/views/admin-all-posts.handlebars
@@ -1,5 +1,12 @@
-<a href= "/dashboard/create">Create Post</a>
-<h1>My Posts</h1>
-{{#each posts as | userPost |}}
-{{> post this}}
+<a href ="/dashboard/create"  style="margin-top: 5px;" class ="create">Create Post</a>
+
+<h2 style="margin-left:50rem;">My Posts</h2>
+<div class="col-md-8">
+{{#each posts }}
+<form method="POST" action="api/post/delete/{{id}}">
+    <button type="submit">DELETE</button>
+</form>
+</form>
+{{>posts this }}
 {{/each}}
+</div>
