--- a/views/partials/gyms.handlebars
+++ b/views/partials/gyms.handlebars
@@ -1,4 +1,8 @@
+<section class="card">
+  <a href="/gyms/{{id}}">
 <div class ='gyms'>
     <h1>{{gym_name}}</h1>
     <h2>{{zipcode}}</h2>
 </div>
+  </a>
+</section>
