--- a/views/partials/gyms.handlebars
+++ b/views/partials/gyms.handlebars
@@ -1,6 +1,6 @@
 <section class="card">
-  <a href="/gyms/{{id}}">
-<div class ='gyms'>
+  <a href="/gym/{{id}}">
+<div class ='gym'>
     <h1>{{gym_name}}</h1>
     <h2>{{zipcode}}</h2>
 </div>
