--- a/views/partials/gyms.handlebars
+++ b/views/partials/gyms.handlebars
@@ -1,5 +1,5 @@
 <section class="card">
-  <a href="/gym/{{id}}">
+  <a href="/gym/:{{id}}">
 <div class ='gym'>
     <h1>{{gym_name}}</h1>
     <h2>{{zipcode}}</h2>
