--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,16 @@
+<nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="#" id="logout-link">Logout</a></li>
+      </ul>
+    </nav>
 <h1>Here are the current list of Gyms</h1>
+
 {{#if username}}
 <p>Hello, {{username}}</p>
 {{/if}}
+
 <div class="container">
     <div class = "row">
         <div class="card col-md-1">
