--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,14 +7,14 @@
   </head>
 
   <body>
-    <nav>
+    {{!-- <nav>
       <ul>
         <li><a href='/'>Home</a></li>
         <li><a href='/dashboard'>Dashboard</a></li>
         <li><a href='/login'>Login</a></li>
         <li><a href='#' id='logout-link'>Logout</a></li>
       </ul>
-    </nav>
+    </nav> --}}
     <header>
       <h1><a href='/'>Welcome to Gymder</a></h1>
     </header>
