--- a/views/admin-all-posts.handlebars
+++ b/views/admin-all-posts.handlebars
@@ -1,12 +1,10 @@
-<a href ="/dashboard/create"  style="margin-top: 5px;" class ="create">Create Post</a>
 
 <h2 style="margin-left:50rem;">My Posts</h2>
 <div class="col-md-8">
-{{#each post }}
+{{#each posts }}
 <form method="POST" action="api/post/delete/{{id}}">
     <button type="submit">DELETE</button>
 </form>
-
 {{>post this }}
 {{/each}}
 </div>
