--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,5 @@
+
+
 <nav>
       <ul>
         <li><a href="/">Home</a></li>
@@ -5,7 +7,7 @@
         <li><a href="#" id="logout-link">Logout</a></li>
       </ul>
     </nav>
-<h1>Here are the current list of Gyms</h1>
+<h1>Choose a Gym</h1>
 
 {{#if username}}
 <p>Hello, {{username}}</p>
