--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -1,3 +1,6 @@
+
+<!--Disconnecting this for now-->
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -14,9 +17,7 @@
         <li><a href="#" id="logout-link">Logout</a></li>
       </ul>
     </nav>
-    <header>
-      <h1><a href="/dashboard">Your Dashboard</a></h1>
-    </header>
+   
 
     <main>
       {{{body}}}
@@ -24,6 +25,8 @@
   </body>
 
 </html>
+
+
 {{! inline script to handle click of logout button }}
 <script>
   const logout = async function() { const response = await
