--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       </ul>
     </nav> --}}
     <header>
-      <h1><a href='/'>Welcome to Gymder</a></h1>
+      <h1><a href='/'></a></h1>
     </header>
 
     <main>
