get post for specific gym

--- a/views/single-gym-post.handlebars
+++ b/views/single-gym-post.handlebars
@@ -1,7 +1,9 @@
 <section class="card-section">
     <div class="posts">
-        {{#each posts}}
+        {{#each posts as |post|}}
         {{>post this}}
+        {{!-- {{#each post.comments}}
+        {{/each}} --}}
         {{/each}}
     </div>
 </section>
