--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@ a {
   color: white;
 }
 
+h2 {
+  color: white
+}
+
 header h1 a {
   color: #fff;
   text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
@@ -32,7 +36,8 @@ nav {
 .container {
   color: white;
 }
-
-#title {
-  color: white;
-}
+/* 
+input #title {
+  
+  color: black !important;;
+} */
