--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/">Gyms</a></li>
         <li><a href="/dashboard">Dashboard</a></li>
         <li><a href="#" id="logout-link">Logout</a></li>
       </ul>
