--- a/views/single-gym-post.handlebars
+++ b/views/single-gym-post.handlebars
@@ -1,6 +1,6 @@
 <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/">Gyms</a></li>
         <li><a href="/dashboard">Dashboard</a></li>
         <li><a href="#" id="logout-link">Logout</a></li>
       </ul>
