--- a/views/partials/gyms.handlebars
+++ b/views/partials/gyms.handlebars
@@ -2,7 +2,11 @@
   <a href="/api/gym/{{id}}">
 <div class ='gym'>
     <h1>{{gym_name}}</h1>
-    <h2>{{zipcode}}</h2>
+    available in
+    {{#each zipcode as |zip|}}
+      <span>{{zip}}</span>
+    {{/each}}
+    {{!-- <h2>{{zipcode}}</h2> --}}
 </div>
   </a>
 </section>
