changed welcome to gymder to gymder

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -130,7 +130,7 @@ after { clear: both; }
 
 </head>
  <header>
-      <h1><a href='/'>Welcome to Gymder</a></h1>
+      <h1><a href='/'>Gymder</a></h1>
     </header>
 <div class="jumbotron vertical-center"></div>
   <div class="container">
