--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -6,7 +6,7 @@ nav ul {
 body {
   padding-top: 100px;
   background-image: url('../images/gym2.jpg');
-  background-size: cover;
+   /* background-size: cover;
   background-position: center;
-  color: white;
+  color: white; */
 }
