--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -1,5 +1,5 @@
 
-<!--Disconnecting this for now-->
+
 
 <html lang="en">
   <head>
@@ -7,31 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gymder</title>
     <link rel="stylesheet" href="/css/style.css" />
+      <script
+      src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js'
+      integrity='sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=='
+      crossorigin='anonymous'
+      referrerpolicy='no-referrer'
+    ></script>
   </head>
 
   <body>
-    <nav>
+ 
+    <div class='slideshow'>
+      <div id='slideshow'>
+      </div>  
+       <nav>
       <ul>
         <li><a href="/">Gyms</a></li>
         <li><a href="/dashboard">Dashboard</a></li>
         <li><a href="#" id="logout-link">Logout</a></li>
       </ul>
     </nav>
-   
+    <br/>
+    <br/>
+    <br/>
+      <main>
+        {{{body}}}
+      </main>
+    </div>
 
-    <main>
-      {{{body}}}
-    </main>
   </body>
 
 </html>
 
 
 {{! inline script to handle click of logout button }}
-<script>
-  const logout = async function() { const response = await
-  fetch('/api/user/logout', { method: 'POST', headers: { 'Content-Type':
-  'application/json' }, }); if (response.ok) { document.location.replace('/'); }
-  else { alert('Failed to log out'); } };
-  document.querySelector('#logout-link').addEventListener('click', logout);
-</script>
+<script src='/js/main.js'></script>
