--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,31 +4,34 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Gymder</title>
     <link rel='stylesheet' href='/css/style.css' />
+    <script
+      src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js'
+      integrity='sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=='
+      crossorigin='anonymous'
+      referrerpolicy='no-referrer'
+    ></script>
   </head>
 
   <body>
-    {{!-- <nav>
+    {{! <nav>
       <ul>
         <li><a href='/'>Home</a></li>
         <li><a href='/dashboard'>Dashboard</a></li>
         <li><a href='/login'>Login</a></li>
         <li><a href='#' id='logout-link'>Logout</a></li>
       </ul>
-    </nav> --}}
+    </nav> }}
     <header>
       <h1><a href='/'></a></h1>
     </header>
-
-    <main>
-      {{{body}}}
-    </main>
+    <div class='slideshow'>
+      <div id='slideshow'>
+      </div>
+      <main>
+        {{{body}}}
+      </main>
+    </div>
   </body>
 </html>
 {{! inline script to handle click of logout button }}
-<script>
-  const logout = async function() { const response = await
-  fetch('/api/user/logout', { method: 'POST', headers: { 'Content-Type':
-  'application/json' }, }); if (response.ok) { document.location.replace('/'); }
-  else { alert('Failed to log out'); } };
-  document.querySelector('#logout-link').addEventListener('click', logout);
-</script>
+<script src='/js/main.js'></script>
