added styling, post is not working

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,7 +20,7 @@
 
 <div class="container">
     <div class = "row">
-        <div class="card col-md-1">
+        <div class="card col-md-1" style="display:flex; gap: 10px;">
         {{#each gyms }}
         {{>gyms this}}
         {{/each }}
