--- a/views/partials/gyms.handlebars
+++ b/views/partials/gyms.handlebars
@@ -1,6 +1,6 @@
-<section class="card">
+<section class="card" style="padding: 10px; background-color: rgba(0,0,0, .5); ">
   <a href="/api/gym/{{id}}">
-<div class ='gym'>
+<div class ='gym' >
     <h1>{{gym_name}}</h1>
     available areas
     {{#each zipcode as |zip|}}
