--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -21,11 +21,13 @@
       <div id='slideshow'>
       </div>  
        <nav>
-      <ul>
-        <li><a href="/">Gyms</a></li>
-        <li><a href="/dashboard">Dashboard</a></li>
-        <li><a href="#" id="logout-link">Logout</a></li>
-      </ul>
+        <ul></ul>
+      <a href="/">Gyms</a>
+        <a href="/dashboard">Dashboard</a>
+        <a href="#" id="logout-link">Logout</a>
+
+        </ul>
+    
     </nav>
     <br/>
     <br/>
