--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,12 +1,15 @@
-nav ul {
+nav {
   position: fixed;
   color: white;
+  text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  display: flex;
+  justify-content: space-between;
 }
 
 body {
   padding-top: 100px;
   background-image: url('../images/gym2.jpg');
-   /* background-size: cover;
+  /* background-size: cover;
   background-position: center;
   color: white; */
 }
