--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,5 +1,6 @@
 a {
   color: white;
+  text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 header h1 a {
@@ -8,8 +9,10 @@ header h1 a {
 }
 nav {
   color: white;
+  text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 .container {
   color: white;
+  text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
