--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,10 @@
 
 
 <nav>
-      <ul>
-        <li><a href="/">Gyms</a></li>
-        <li><a href="/dashboard">Dashboard</a></li>
-        <li><a href="#" id="logout-link">Logout</a></li>
-      </ul>
+      <a href="/">Gyms</a>
+      <a href="/dashboard">Dashboard</a>
+      <a href="#" id="logout-link">Logout</a>
+
     </nav>
     <br/>
     <br/>
