--- a/views/partials/gyms.handlebars
+++ b/views/partials/gyms.handlebars
@@ -1,12 +1,9 @@
-<section class="card" style="padding: 10px; background-color: rgba(0,0,0, .5); ">
+<section class="card">
   <a href="/api/gym/{{id}}">
-<div class ='gym' >
+<div class='gym' >
     <h1>{{gym_name}}</h1>
-    available areas
-    {{#each zipcode as |zip|}}
-      <span>{{zip}}</span>
-    {{/each}}
-    {{!-- <h2>{{zipcode}}</h2> --}}
+    
+  
 </div>
   </a>
 </section>
