--- a/views/single-gym-post.handlebars
+++ b/views/single-gym-post.handlebars
@@ -1,9 +1,9 @@
 <nav>
-      <ul>
-        <li><a href="/">Gyms</a></li>
-        <li><a href="/dashboard">Dashboard</a></li>
-        <li><a href="#" id="logout-link">Logout</a></li>
-      </ul>
+      
+        <a href="/">Gyms</a>
+        <a href="/dashboard">Dashboard</a>
+        <a href="#" id="logout-link">Logout</a>
+      
     </nav>
 <br/>
 <br/>
