--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -10,6 +10,9 @@ header h1 a {
 nav {
   color: white;
   text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  list-style-type: none;
+  margin: 10;
+  padding: 10;
 }
 
 .container {
