--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,13 @@
+p {
+  color: white;
+  text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+
 a {
   color: white;
   text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-  margin: 10;
-  padding: 10;
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
@@ -15,15 +20,15 @@ h2 {
 h1 {
   color: white;
   text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-  margin: 10;
-  padding: 10;
+  margin: 0;
+  padding: 0;
 }
 
 header h1 a {
   color: #fff;
   text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-  margin: 10;
-  padding: 10;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
 }
@@ -58,6 +63,8 @@ nav {
 
 .container {
   color: white;
+  margin: 10;
+  padding: 10;
 }
 /* 
 input #title {
@@ -69,8 +76,8 @@ body {
   width: 100vw;
   height: 100vh;
 
-  margin: 10;
-  padding: 10;
+  margin: 0;
+  padding: 0;
 }
 /* set `#slideshow` parent background color */
 .slideshow {
@@ -104,7 +111,8 @@ main {
   background-image: url('../images/exercise7.jpg'),
     url('../images/exercise2.jpg'), url('../images/exercise3.jpg'),
     url('../images/exercise4.jpg'), url('../images/exercise5.jpg'),
-    url('../images/exercise6.jpg');
+    url('../images/exercise6.jpg'), url('../images/exercise8.jpg'),
+    url('../images/exercise9.jpg');
   /* url("http://lorempixel.com/400/400/nature/?3"), 
     url("http://lorempixel.com/400/400/technics/?4"), 
     url("http://lorempixel.com/400/400/city/?5"); */
