added placeholder text

--- a/views/single-gym-post.handlebars
+++ b/views/single-gym-post.handlebars
@@ -26,8 +26,8 @@
     <input type="text" name="title" id="title" />
     <input type="hidden" name="gymId" value="{{id}}" />
     <br>
-    <p>Please add information such as age, gender of wanted partner, workout type, muscle group and time.</p>
-    <textarea name="body" id="body" cols="30" rows="10"></textarea>
+    <p>Message</p>
+    <textarea name="body" id="body" cols="30" rows="10" placeholder="Hey I'm Sam, I'm looking for a gym buddy for tonight at 7pm near the zipcode of 92614. My sessions are around 1 hour long and I prefer powerlifting. I'm 220, 6'0"></textarea>
     <br>
     <button type="submit" id="submit">Create Post</button>
 </form>
