--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ h1 {
   color: white;
   text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   margin: 0;
-  padding: 0;
+  padding: 10;
 }
 
 header h1 a {
@@ -57,8 +57,8 @@ nav {
   z-index: 11;
 
   list-style-type: none;
-  margin: 10;
-  padding: 10;
+  margin: ;
+  padding: ;
 }
 
 .container {
